tests/NormalTests/paczka1/fuzzy1/15877095.err
Error in line 10: sHfhH A573 84,2
Error in line 1: RkbXQqClbc A198 80,0
Error in line 13: Zzh6AIViI A198 83,4
Error in line 22: RkbXQqClbc A198 61,50
Error in line 21: RkbXQqClbc A726 140,9
Error in line 16: PgCIU7VJCJ0 A573 15,9
Error in line 33: PgCIU7VJCJ0 A508 -1,7
Error in line 31: PgCIU7VJCJ0 A508 13,4
Error in line 29: Zzh6AIViI A198 47,1
Error in line 37: Zzh6AIViI A573 3,6
